scripts/installation/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mercury-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: live.mercury.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mercury-service
                port:
                  number: 88
